# wikired-api

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: main.yml  pull-request.yml
src/: app.py
src/services/: sv_wikired.py
